syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.orderservice.grpc";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string product = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string status = 1;
}