syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.inventoryservice.grpc";
option java_outer_classname = "ProductProto";

service InventoryService {
  rpc CheckStock(StockRequest) returns (StockResponse);
  rpc UpdateStock(UpdateStockRequest) returns (StockResponse);
}

message StockRequest {
  string product = 1;
  int32 quantity = 2;
}

message UpdateStockRequest {
  string product = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
  int32 stockQuantity = 2;
  string message = 3;
}